Sculpt Line Project tool and Shade Smooth issue #81343

Closed
opened 2020-10-01 05:52:52 +02:00 by TheRedWaxPolice · 3 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-2.91.0-2c317457cbf2-windows64

Short description of error
When you use the Line Project tool on a mesh that has Shade Smooth applied, the shading somewhat doesn't update...
To fix it I need to enter in Edit mode and then go back to Sculpt mode...
Maybe it's a bug, I don't know.....

Exact steps for others to reproduce the error

  • File -> New -> Sculpting
  • Go to Object mode and apply Shade Smooth to the Sphere
  • Go to Sculpt mode, choose the Line Project tool and perform a "cut"
  • You can see the shading somewhat remains the same, even though the geometry moved
  • ...
  • To fix the shading, jump into Edit mode and then go back to Sculpt mode

2020-10-01_04-27-50.mp4

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-2.91.0-2c317457cbf2-windows64 **Short description of error** When you use the Line Project tool on a mesh that has Shade Smooth applied, the shading somewhat doesn't update... To fix it I need to enter in Edit mode and then go back to Sculpt mode... Maybe it's a bug, I don't know..... **Exact steps for others to reproduce the error** - File -> New -> Sculpting - Go to Object mode and apply Shade Smooth to the Sphere - Go to Sculpt mode, choose the Line Project tool and perform a "cut" - You can see the shading somewhat remains the same, even though the geometry moved - ... - To fix the shading, jump into Edit mode and then go back to Sculpt mode [2020-10-01_04-27-50.mp4](https://archive.blender.org/developer/F8942674/2020-10-01_04-27-50.mp4)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

This issue was referenced by e1e061384b

This issue was referenced by e1e061384be5d36ff2aa974b17fe1d819db0e6a8
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-10-05 19:37:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81343
No description provided.