Fix T81343: Smooth shading normals not updating with line project tool

Just a missing update flag

Reviewed By: mont29

Maniphest Tasks: T81343

Differential Revision: https://developer.blender.org/D9077